--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,10 +15,10 @@ jobs:
       
       - name: build image
         shell: bash
-        run: docker build -t demo_flask_app_helloworld:latest .
+        run: docker build -t demo-flask-app:latest .
 
       - name: login to JFrog artifactory
         run: echo "${{secrets.JFROG_PASSWORD}}" | docker login -u ${{secrets.JFROG_USERNAME}} venkattrailrepo.jfrog.io --password-stdin
 
       - name: push images to JFrog artifactory
-        run: docker push demo_flask_app_helloworld:latest
+        run: docker push demo-flask-app:latest
